cmake_minimum_required(VERSION 3.21)
project(untitled17)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled17 main.cpp ServerLibraryComponent.cpp ServerLibraryComponent.h ServerBaseBookComponent.cpp ServerBaseBookComponent.h ServerBookComponent.cpp ServerBookComponent.h Date.cpp Date.h ServerMagazineComponent.cpp ServerMagazineComponent.h ServerBaseUserComponent.cpp ServerBaseUserComponent.h)
